--- a/app/src/main/res/layout/layout_pokemon_item2.xml
+++ b/app/src/main/res/layout/layout_pokemon_item2.xml
@@ -37,21 +37,21 @@
             android:text="@string/poekmon_name"
             android:textSize="26sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/activity_main_type01"
+            app:layout_constraintBottom_toBottomOf="@+id/layout_type01"
             app:layout_constraintStart_toEndOf="@id/layout_pokemon_item_ImgView"
-            app:layout_constraintTop_toTopOf="@+id/activity_main_type01"
+            app:layout_constraintTop_toTopOf="@+id/layout_type01"
             tools:text="Charmander" />
 
         <TextView
-            android:id="@+id/activity_main_pokemon_number"
+            android:id="@+id/layout_pokemon_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_small"
             android:textColor="@android:color/darker_gray"
             android:textSize="30sp"
-            app:layout_constraintBottom_toBottomOf="@+id/activity_main_type02"
+            app:layout_constraintBottom_toBottomOf="@+id/layout_type02"
             app:layout_constraintStart_toStartOf="@+id/layout_pokemon_item_txtname"
-            app:layout_constraintTop_toTopOf="@+id/activity_main_type02"
+            app:layout_constraintTop_toTopOf="@+id/layout_type02"
             tools:text="Nº 001" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -69,7 +69,7 @@
             app:layout_constraintGuide_percent="0.65" />
 
         <TextView
-            android:id="@+id/activity_main_type01"
+            android:id="@+id/layout_type01"
             android:layout_width="90dp"
             android:layout_height="35dp"
             android:layout_marginEnd="8dp"
@@ -84,7 +84,7 @@
             tools:text="FIRE" />
 
         <TextView
-            android:id="@+id/activity_main_type02"
+            android:id="@+id/layout_type02"
             android:layout_width="90dp"
             android:layout_height="35dp"
             android:layout_marginTop="4dp"
@@ -94,8 +94,8 @@
             android:textSize="18sp"
             android:textStyle="normal
 "
-            app:layout_constraintEnd_toEndOf="@+id/activity_main_type01"
-            app:layout_constraintStart_toStartOf="@+id/activity_main_type01"
+            app:layout_constraintEnd_toEndOf="@+id/layout_type01"
+            app:layout_constraintStart_toStartOf="@+id/layout_type01"
             app:layout_constraintTop_toTopOf="@+id/activity_main_guidelineHorizontal"
             tools:text="FIRE" />
 
