--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -93,6 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/activity_main_linearLayout_buttons">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPokemons"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/layout_pokemon_item2" />
