--- a/app/src/main/res/layout/activity_main_list.xml
+++ b/app/src/main/res/layout/activity_main_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:viewBindingIgnore="true"
     android:background="#EDF0F6"
     tools:context=".ui.ActivityMain">
 
@@ -88,8 +89,6 @@
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
 <!--            tools:listitem="@layout/layout_pokemon_item2" />-->
-
-
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
